--- a/package.json
+++ b/package.json
@@ -7,8 +7,27 @@
     "test": "tests"
   },
   "scripts": {
-    "test": "mocha tests",
-    "start": "node index.js"
+    "test": "nyc mocha tests",
+    "coverage": "nyc report --reporter=text-lcov | coveralls",
+    "check-coverage": "nyc check-coverage --lines 80 --statements 80 --branches 80",
+    "start": "node index.js",
+    "pre-push": "npm test",
+    "lint": "eslint . --fix && prettier --write ."
+  },
+  "nyc": {
+    "branches": 80,
+    "functions": 80,
+    "lines": 80,
+    "statements": 80,
+    "report-dir": "coverage",
+    "temp-dir": ".nyc_output",
+    "reporter": [
+      "lcov",
+      "text",
+      "html"
+    ],
+    "all": true,
+    "check-coverage": true
   },
   "keywords": [
     "Xendit"
@@ -17,13 +36,22 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "chai": "^4.3.10",
     "express": "^4.16.4",
+    "sinon": "^17.0.1",
     "sqlite3": "^4.0.6",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0"
   },
   "devDependencies": {
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.29.0",
     "mocha": "^6.1.4",
-    "supertest": "^4.0.2"
+    "nyc": "^15.1.0",
+    "pre-push": "^0.1.4",
+    "prettier": "^2.3.0",
+    "supertest": "^4.0.2",
+    "winston": "^3.11.0"
   }
 }
