--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
   "author": "Bo",
   "license": "ISC",
   "dependencies": {
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.10.0",
     "body-parser": "^1.19.0",
     "chai": "^4.3.10",
     "express": "^4.16.4",
@@ -43,6 +45,7 @@
     "sqlite3": "^4.0.6",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0",
+    "typescript": "^5.3.2",
     "winston-daily-rotate-file": "^4.7.1"
   },
   "devDependencies": {
