--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "check-coverage": "nyc check-coverage --lines 80 --statements 80 --branches 80",
     "start": "node index.js",
     "pre-push": "npm test",
-    "lint": "eslint . --fix && prettier --write ."
+    "lint": "eslint . --fix && prettier --write .",
+    "test:load": "artillery run load-test.yml"
   },
   "nyc": {
     "branches": 80,
